// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base rendering 1`] = `
<form
  onSubmit={[Function]}
>
  <h4
    className="title"
  >
    My title
  </h4>
  <div
    className="row"
  >
    <Field
      className="input inputTitle"
      component={[Function]}
      name="title"
      placeholder="Title here"
      type="text"
      validate={
        Array [
          [Function],
        ]
      }
    />
  </div>
  <div
    className="row"
  >
    <Field
      className="textarea mainTextarea"
      component="textarea"
      name="content"
      placeholder="Content here"
    />
  </div>
  <div
    className="section"
  >
    <h5
      className="subtitle"
    >
      Sections
    </h5>
    <FieldArray
      className="row"
      component={[Function]}
      name="sections"
    />
  </div>
  <div
    className="section"
  >
    <button
      className="button"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`Subfield rendering 1`] = `
<div
  className="subFields"
>
  <button
    className="vanilla newSectionButton"
    onClick={[Function]}
    type="button"
  >
    + Add new section
  </button>
</div>
`;

exports[`Subfield rendering 2`] = `
<div
  className="subFields"
>
  <div
    className="section"
  >
    <div
      className="row"
    >
      <Field
        className="input inputSubtitle"
        component={[Function]}
        name="[object Object].title"
        placeholder="Section title here"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </div>
    <div
      className="row"
    >
      <Field
        className="textarea"
        component="textarea"
        name="[object Object].content"
        placeholder="Section content here"
      />
    </div>
    <div
      className="deleteSectionButton"
      onClick={[Function]}
    >
      <svg
        className="icon"
      >
        <use
          xlinkHref="#bin"
        />
      </svg>
    </div>
  </div>
  <button
    className="vanilla newSectionButton"
    onClick={[Function]}
    type="button"
  >
    + Add new section
  </button>
</div>
`;
